--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-    "jupyter.jupyterServerType": "local",
-    "notebook.cellFocusIndicator": "border"
+    "jupyter.jupyterServerType": "local"
 }
